--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "guess-who",
   "version": "0.1.0",
+  "homepage": "https://github.com/drbenn/guess-who-react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
